<resources>
    <string name="hello">สวัสดี ชาวโลก</string>
    <string name="app_name">Family Folder Collector</string>
    <string name="app_lable">FFC+</string>
    <string name="app_version">Plus 3.4</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="sure_to_exit">ต้องการออกจากระบบ?</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="password">รหัสผ่าน</string>
    <string name="incorrect_user_pass">ชื่อผู้ใช้ หรือ รหัสผ่านไม่ถูกต้อง</string>
    <string name="enter_user_pass">กรุณาใส่ชื่อผู้ใช้ และรหัสผ่าน</string>
    <string name="login_hint">ใช้ชื่อผู้ใช้ และรหัสผ่าน เดียวกับ JHCIS</string>
    <string name="title">หัวข้อ</string>
    <string name="subtitle">หัวข้อย่อย</string>
    <string name="content">เนื้อหา</string>
    <string name="version">เวอร์ชั่น</string>
    <string name="camera">กล้อง</string>
    <string name="search">ค้นหา</string>
    <string name="add">เพิ่ม</string>
    <string name="save">บันทึก</string>
    <string name="cancel">ยกเลิก</string>
    <string name="delete">ลบ</string>
    <string name="ok">ตกลง</string>
    <string name="back">กลับ</string>
    <string name="edit">แก้ไข</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="more">เพิ่มเติม&#8230;</string>
    <string name="loading">กำลังโหลด&#8230;</string>
    <string name="not_available">ไม่มีข้อมูล</string>
    <string name="null_string"></string>
    <string name="empty">ว่าง</string>
    <string name="please_wait">กรุณารอสักครู่&#8230;</string>
    <string name="invalid_number_format">ผิดรูปแบบ</string>
    <string name="general">ทั่วไป</string>
    <string name="discard">ต้องการยกเลิก?</string>
    <string name="ask_to_continue">ต้องการทำต่อ?</string>
    <string name="bath_per_month">บาทต่อเดือน</string>
    <string name="bath_per_year">บาทต่อปี</string>
    <string name="person">บุคคล</string>
    <string name="address">ที่อยู่</string>
    <string name="unable">พิการ</string>
    <string name="male">ผู้ชาย</string>
    <string name="female">ผู้หญิง</string>
    <string name="village">หมู่บ้าน</string>
    <string name="house">บ้าน</string>
    <string name="houseNo">บ้านเลขที่</string>
    <string name="person_search">ชื่อ นามสกุล หรือ รหัสประชาชน</string>
    <string name="fname">ชื่อ</string>
    <string name="lname">นามสกุล</string>
    <string name="citizenID">รหัสประชาชน</string>
    <string name="household">เจ้าบ้าน</string>
    <string name="number">จำนวน</string>
    <string name="postCode">รหัสไปรษณีย์</string>
    <string name="fullname">ชื่อ-นามสกุล</string>
    <string name="shape">#</string>
    <string name="code">รหัส</string>
    <string name="owner">เจ้าของ</string>
    <string name="visit">บริการ</string>
    <string name="visit_record">ดูประวัติ</string>
    <string name="visit_new">ให้บริการ</string>
    <string name="personal_data">เกี่ยวกับ</string>
    <string name="sex">เพศ</string>
    <string name="birthday">วันเกิด</string>
    <string name="age">อายุ</string>
    <string name="year">ปี</string>
    <string name="month">เดือน</string>
    <string name="day">วัน</string>
    <string name="nation">สัญชาติ</string>
    <string name="origin">เชื้อชาติ</string>
    <string name="blood">หมูเลือด</string>
    <string name="occupa">อาชีพ</string>
    <string name="religion">ศาสนา</string>
    <string name="mister">นาย</string>
    <string name="miss">นาง</string>
    <string name="missis">นางสาว</string>
    <string name="boy">ด.ช.</string>
    <string name="girl">ด.ญ. </string>
    <string name="allergic">การแพ้ยาหรืออาหาร</string>
    <string name="income">รายได้</string>
    <string name="nickname">ชื่อเล่น</string>
    <string name="tel">โทร.</string>
    <string name="bath">บาท</string>
    <string name="education">การศึกษา</string>
    <string name="familyno">ลำดับครอบครัว</string>
    <string name="familyposition">ตำแหน่งในครอบคัว</string>
    <string name="relation">ความสัมพันธ์</string>
    <string name="father">บิดา</string>
    <string name="mother">มารดา</string>
    <string name="mate">คู่สมรส</string>
    <string name="marry_status">สถานะ</string>
    <string name="familychronic">โรคเรื้อรังในครอบครัว</string>
    <string name="right">สิทธิ์</string>
    <string name="rightno">หมายเลขสิทธิ์</string>
    <string name="regis">วันลงทะเบียน</string>
    <string name="active">วันเริ่ม</string>
    <string name="expire">วันหมดอายุ</string>
    <string name="hosmain">โรงพยาบาลหลัก</string>
    <string name="hossub">โรงพยาบาลรอง</string>
    <string name="hint_expire_early">วันหมดอายุ ต้องหลักวันลงบะเทียน</string>
    <string name="behavior_data">พฤติกรรม</string>
    <string name="cigarette">สูบบุหรี่</string>
    <string name="wiskey">ดื่มสุรา</string>
    <string name="exercise">ออกกำลังกาย</string>
    <string name="tonic">เครื่องดื่มชูกำลัง</string>
    <string name="drug_by_self">ซื้อยารัปประทานเอง</string>
    <string name="big_accident_ever">เคยเกิดอุบัติเหตุใหญ่</string>
    <string name="sugar">น้ำตาล</string>
    <string name="sweet">ทานหวาน</string>
    <string name="salt">ทานเค็ม</string>
    <string name="salt_alt">เกลือ</string>
    <string name="nutrition_data">ข้อมูลโภชนการ</string>
    <string name="hint_no_dx">ไม่มี Principle-Dx กรุณาลองใหม่ออกครั้ง.</string>
    <string name="hint_more_dx">Principle-DX มีมากกว่า 1 รายการ</string>
    <string name="hint_selection_one_dx">เลือก 1 Principle-DX</string>
    <string name="epi">ฉีดวัคซีน</string>
    <string name="lab_blood">ตรวจเลือด</string>
    <string name="principle_dx">Principle DX</string>
    <string name="visit_default_first">กรุณา ให้บริการทั่วไปก่อน</string>
    <string name="weight_height">น้ำหนัก &amp; ส่วนสูง</string>
    <string name="height">ส่วนสูง</string>
    <string name="weight">น้ำหนัก</string>
    <string name="centimeter">ซม.</string>
    <string name="kilogram">กก.</string>
    <string name="mmhg">mmHg</string>
    <string name="time_per_minute">ครั้ง/นาที</string>
    <string name="temperature">อุณหภูมิ</string>
    <string name="pressure_pulse">ความดัน &amp; ชีพจร</string>
    <string name="pulse">ชีพจร</string>
    <string name="pressure">ความดัน</string>
    <string name="ass_waist">สะโพก &amp; รอบเอว</string>
    <string name="ass">สะโพก</string>
    <string name="waist">รอบเอว</string>
    <string name="celcius">°C</string>
    <string name="measurement">การวัด</string>
    <string name="diagnose">การวินิจฉัย</string>
    <string name="symtom">อาการเบื้องต้น</string>
    <string name="symtomsco">อาการร่วมอื่นๆ</string>
    <string name="vitalcheck">ผลการตรวจ</string>
    <string name="heatlhsuggest">คำแนะนำสุขภาพ</string>
    <string name="continue_">ต่อเนื่อง</string>
    <string name="diagnosis">วินิจฉัย</string>
    <string name="diagnote">คำวินิจฉัย</string>
    <string name="drug">ยา</string>
    <string name="dose">วิธีการใช้ยา</string>
    <string name="clinic">คลีนิค</string>
    <string name="appoint">การนัดหมาย</string>
    <string name="cost">ราคา</string>
    <string name="unit">จำนวน</string>
    <string name="sell">ขาย</string>
    <string name="duplicate_drug">มีการจ่ายยาซ้ำ</string>
    <string name="drugformula">ยาชุด</string>
    <string name="hosservice">รพ. ทีให้่บริการ</string>
    <string name="hoslab">รพ. ตรวจแล็ป</string>
    <string name="result">ผล</string>
    <string name="pregnant">ตั้งครรภ์</string>
    <string name="hct">HCT(%) Hemotocrits</string>
    <string name="vdrl">VDRL</string>
    <string name="hiv">HIV</string>
    <string name="hbag">HBsAg</string>
    <string name="talas_of">Thalassemia OF</string>
    <string name="talas_dcip">Thalassemia DCIP</string>
    <string name="remark">หมายเหตุ</string>
    <string name="first_date_check">ตรวจครั้งแรก</string>
    <string name="pregno">ครรภ์ที่</string>
    <string name="lmp">LMP</string>
    <string name="edc">EDC</string>
    <string name="first_abnormal">ไม่ปรกติ</string>
    <string name="physical_exam">การตรวจทางกายภาพ</string>
    <string name="bmi">BMI</string>
    <string name="albumin">อัลบูมิน</string>
    <string name="nipple">หัวนมบอด</string>
    <string name="headache">ปวดหัว</string>
    <string name="sinkening">คลื่นไส้</string>
    <string name="tyroid">ไทรอยด์โต</string>
    <string name="utmugo">ตกขาว</string>
    <string name="edima">อาการบวกของแม่</string>
    <string name="utblood">เลือดออกช่องคลอด</string>
    <string name="cramp">ตะคริว</string>
    <string name="heart_attach">โรคหัวใจ</string>
    <string name="abnormal_status">สถานะผิดปกติ</string>
    <string name="urinary">ช่องปัจสวะผิดปกติ</string>
    <string name="baby_exam">การตวจทารก</string>
    <string name="baby_dance">ทารกดิ้น</string>
    <string name="baby_position">ตำแหน่งทารก</string>
    <string name="baby_heart">การเต้นหัวใจ</string>
    <string name="pilot">ส่วนนำ</string>
    <string name="summarize">สรุป</string>
    <string name="tooth_exam">ตรวจฟัน</string>
    <string name="caries">ฟันผุ</string>
    <string name="tartar">หินปูน</string>
    <string name="gum_fail">เหงือกอักเสบ</string>
    <string name="pregnanc_exam">การตรวจครรภ์</string>
    <string name="pregnanc_risk">ความเสี่ยงตั้งครรภ์</string>
    <string name="contracep">การคุมกำเนิด</string>
    <string name="record">บันทึก</string>
    <string name="talas">Talasimia</string>
    <string name="usually">เป็นประจำ</string>
    <string name="unusual">ไม่ประจำ</string>
    <string name="anc">ตรวจครรภ์</string>
    <string name="fundus">Fundus</string>
    <string name="normal">ปกติ</string>
    <string name="abnormal">ผิดปกติ</string>
    <string name="thin">ผอม</string>
    <string name="state_date">วันเวลาไม่อัพเดท</string>
    <string name="state_date_suggest">วันเวลาบนเครื่องนี้ ช้ากว่าเวลาการให้บริการครั้งหลังสุด</string>
    <string name="process_anyway">ทำต่อ</string>
    <string name="temple_create">วัด</string>
    <string name="water_create">แหล่งน้ำ</string>
    <string name="school_create">โรงเรียน</string>
    <string name="shop_create">ร้านค้า</string>
    <string name="vola_name">ชื่อ อสม.</string>
    <string name="hospital_create">โรงพยาบาล</string>
    <string name="home_chronic">บ้านผู้เรื้อรัง</string>
    <string name="cdisease">ระบาดวิทยา</string>
    <string name="from">ตั้งแต่</string>
    <string name="after_pregnant">หญิงหลังคลอด</string>
    <string name="house_cat">หมวดบ้าน</string>
    <string name="misc_cat">หมวดอื่นๆ</string>
    <string name="house_subcat">หมวดย่อย</string>
    <string name="click_more">เลือกเพื่อดูรายละเอียด</string>
    <string name="open">เปิดการใช้งาน ตัวกรองการแสดงผลแผนที่</string>
    <string name="show_all">แสดงทั้งหมด</string>
    <string name="senior">ผู้สูงอายุ (อายุ 60 ปี ขึ้นไป)</string>
    <string name="map1">Satellite</string>
    <string name="map2">Satellite with Path Overlay</string>
    <string name="map3">Google Maps</string>
    <string name="center_text">ตำแหน่งปัจจุบัน</string>
    <string name="map_style_text">รูปแบบแผนที่</string>
    <string name="filter_text">กรองพิกัด</string>
    <string name="wifi_text">"WIFI : "</string>
    <string name="gps_text">"GPS : "</string>
    <string name="poi_create">จุดสนใจ</string>
    <string name="AssessBodyMassIndex">ประเมินดัชนีมวลกาย (ชั่งนํ้าหนักวัดส่วนสูง) และรอบเอว</string>
    <string name="InterpretationOfBodyMassIndex">แปลผลดัชนีมวลกาย(BMI)</string>
    <string name="bmi_18_5"><![CDATA[BMI <18.5 ต่ำกว่าเกณฑ์]]></string>
    <string name="bmi_18_5_22_90">BMI 18.5-22.90 ปกติสมส่วน</string>
    <string name="bmi_23_24_90">BMI 23-24.90 น้ําหนักเกิน</string>
    <string name="bmi_25_29_90_1">BMI 25-29.90 อ้วนระดับ 1</string>
    <string name="bmi_30_2"><![CDATA[BMI >30 อ้วนระดับ 2]]></string>
    <string name="WaistCircumferenceInterpretation">แปลผลเส้นรอบเอว (ประเมินภาวะอ้วน)</string>
    <string name="Normal_90_80">ปกติ (ผู้ชายน้อยกว่า 90 ซม. ผู้หญิงน้อยกว่า 80 ซม)</string>
    <string name="Obese_90_80">อ้วน (ผู้ชายตั้งแต่ 90 ซม. ขึ้นไป, ผู้หญิงตั้งแต่ 80 ซม. ขึ้นไป)</string>
</resources>