<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/menu_center"
      android:icon="@drawable/where_am_i"
      android:orderInCategory="2"
      android:title="@string/center_text"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/menu_search"
      android:icon="@drawable/search"
      android:orderInCategory="3"
      android:title="@string/search"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/menu_map_style"
      android:icon="@drawable/mapstyle"
      android:orderInCategory="4"
      android:title="@string/map_style_text"
      app:showAsAction="ifRoom">
    <menu>
      <group
          android:id="@+id/menu_map_style_group"
          android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sat"
            android:title="@string/map1"/>
        <item
            android:id="@+id/menu_sat_path"
            android:checked="true"
            android:title="@string/map2"/>
        <item
            android:id="@+id/menu_normal"
            android:title="@string/map3"/>
      </group>
    </menu>
  </item>
  <item
      android:id="@+id/menu_filter"
      android:icon="@drawable/filter"
      android:orderInCategory="5"
      android:title="@string/filter_text"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/menu_wifi_status"
      android:icon="@drawable/wifi2"
      android:orderInCategory="0"
      android:title="@string/wifi_text"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/menu_gps_status"
      android:icon="@drawable/gps2"
      android:orderInCategory="1"
      android:title="@string/gps_text"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/addpositionok"
      android:icon="@drawable/gps2"
      android:orderInCategory="1"
      app:showAsAction="always"

  />

</menu>
