<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="house_checkbox_all"
            android:title="@string/show_all"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="chronic_checkbox"
            android:title="@string/home_chronic"/>
    <Preference
            android:dependency="chronic_checkbox"
            android:key="chronic_subcat"
            android:summary="@string/click_more"
            android:title="@string/home_chronic"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="disease_checkbox"
            android:title="@string/cdisease"/>
    <Preference
            android:dependency="disease_checkbox"
            android:key="disease_subcat"
            android:summary="@string/click_more"
            android:title="@string/cdisease"/>
    <th.in.ffc.util.DatePreference
            android:dependency="disease_checkbox"
            android:key="disease_date"
            android:title="@string/from"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="pregnant_checkbox"
            android:title="@string/pregnant"/>
    <th.in.ffc.util.DatePreference
            android:dependency="pregnant_checkbox"
            android:key="pregnant_date"
            android:title="@string/from"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="after-pregnant_checkbox"
            android:title="@string/after_pregnant"/>
    <th.in.ffc.util.DatePreference
            android:dependency="after-pregnant_checkbox"
            android:key="after-pregnant_date"
            android:title="@string/from"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="unable_checkbox"
            android:title="@string/unable"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="vola_checkbox"
            android:title="@string/vola_name"/>
    <Preference
            android:dependency="vola_checkbox"
            android:key="vola_subcat"
            android:summary="@string/click_more"
            android:title="@string/vola_name"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="house_checkbox_all"
            android:key="old_checkbox"
            android:title="@string/senior"/>
</PreferenceScreen>
