<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise"/>

        <Spinner
                android:id="@id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cigarette"/>

        <Spinner
                android:id="@id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiskey"/>

        <Spinner
                android:id="@id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tonic"/>

        <Spinner
                android:id="@id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_accident_ever"/>

        <CheckBox
                android:id="@id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_by_self"/>

        <CheckBox
                android:id="@id/answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sweet"/>

        <CheckBox
                android:id="@id/answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

        <TextView
                style="@style/FFC.TextView.Subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salt"/>

        <CheckBox
                android:id="@id/answer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

    </LinearLayout>

</ScrollView>
