<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/state_padding">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content"
            android:src="@drawable/state_date"/>

    <TextView
            style="@style/FFC.TextView.Content.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/state_date"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/state_padding"
            android:gravity="center"
            android:text="@string/state_date_suggest"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
            android:id="@id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_anyway"/>

</LinearLayout>
